<resources>
    <string name="app_name">AppSugestao</string>

    <string name="titleSugestao">Caixa de Sugestão</string>

    <!-- MAIN_PAGE -->
    <string name="identificar">Identificar</string>
    <string name="naoIndetificar">Não identificar</string>
    <string name="seInscrever">Não tem conta? Criar conta.</string>

    <!-- SECOND_PAGE -->
    <string name="btEnviar">Enviar sugestão</string>
    <string name="titleTexto">Titulo da sugestão</string>
    <string name="mutlineTexto">Escreva aqui seu comentário</string>

    <!-- LOGIN_PAGE-->
    <string name="user">Usuário</string>
    <string name="password">Senha</string>
    <string name="signin">Entrar</string>

    <!--Formulario de Cadastro-->
    <string name="nameUser">Nome</string>
    <string name="sobreNomeUser">Sobrenome</string>
    <string name="emailUser">E-mail</string>
    <string name="telephoneUser">Telefone</string>
    <string name="passwordNew">Senha</string>
    <string name="passwordConfirm">Confirme sua senha</string>
    <string name="saveDados">Enviar</string>
</resources>